@@ -1,45 +1,68 @@
 package com.acme.messenger.service;
 
-
-import com.acme.messenger.domain.UserEntity;
-import com.acme.messenger.repository.UserRepository;
+import com.acme.messenger.domain.FileEntity;
+import com.acme.messenger.repository.FileRepository;
 import lombok.RequiredArgsConstructor;
-import org.apache.commons.codec.digest.DigestUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.time.LocalDate;
+import java.nio.file.Paths;
+import java.time.Instant;
 import java.util.UUID;
-
 
 @Service
 @RequiredArgsConstructor
 public class FileStorageService {
-    @Value("${storage.root:./uploads}")
-    private Path root;
 
+    private final FileRepository fileRepository;
 
-    private final UserRepository userRepo;
+    @Value("${app.upload-dir:/var/messenger/uploads}")
+    private String uploadRoot;
 
-    public Path store(UUID channelId, String username, MultipartFile file) throws IOException {
-        Files.createDirectories(root);
-        UserEntity user = userRepo.findByEmail(username).orElseThrow();
-        var date = LocalDate.now();
-        var dir = root.resolve(channelId.toString()).resolve(String.format("%04d/%02d/%02d", date.getYear(), date.getMonthValue(), date.getDayOfMonth()));
-        Files.createDirectories(dir);
-        var id = UUID.randomUUID();
-        var safe = Path.of(file.getOriginalFilename()).getFileName().toString();
-        var target = dir.resolve(id + "_" + safe);
-        try (var is = file.getInputStream()) {
-            Files.copy(is, target);
-        }
-        var sha = DigestUtils.sha256Hex(Files.newInputStream(target));
-// In a real app you'd save metadata to DB
-        return target;
+    public FileEntity store(UUID channelId, String username, MultipartFile file) throws IOException {
+        UUID fileId = UUID.randomUUID();
+        UUID uploaderId = UUID.nameUUIDFromBytes(username.getBytes());
+        Path dirPath = Paths.get(uploadRoot, channelId.toString(), uploaderId.toString());
+        Files.createDirectories(dirPath);
+
+        String filename = fileId + "_" + file.getOriginalFilename();
+        Path filePath = dirPath.resolve(filename);
+
+        file.transferTo(filePath.toFile());
+
+        File f = filePath.toFile();
+        f.setReadable(false, false);
+        f.setWritable(false, false);
+        f.setReadable(true, true);
+        f.setWritable(true, true);
+
+        FileEntity entity = new FileEntity();
+        entity.setId(fileId);
+        entity.setChannelId(channelId);
+        entity.setUploaderId(uploaderId);
+        entity.setOriginalName(file.getOriginalFilename());
+        entity.setMimeType(file.getContentType());
+        entity.setSize(file.getSize());
+        entity.setStoragePath(filePath.toAbsolutePath().toString());
+        entity.setCreatedAt(Instant.now());
+
+        return fileRepository.save(entity);
+    }
+
+    public FileEntity getFile(UUID fileId) {
+        return fileRepository.findById(fileId).orElseThrow(() -> new IllegalArgumentException("File not found"));
+    }
+
+    public Path getFilePath(UUID fileId) {
+        return Paths.get(getFile(fileId).getStoragePath());
+    }
+
+    public java.util.List<FileEntity> getFilesByChannel(UUID channelId) {
+        return fileRepository.findByChannelId(channelId);
     }
 }
